# ssnp_sip

./: .gitignore  Makefile  README.md  README_ja.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: anti_concentration.md  general.md  scoring.md
.github/workflows/: agent-py-release.yml  go-release.yml  go-test.yml
agent/: README.md  README_ja.md  config.example.yaml  config.testnet.example.yaml  go.mod
agent_py/: README.md  pyproject.toml
agent_py/ssnp_agent/: __init__.py  agent.py  checks.py  cli.py  config.py  crypto.py  http_client.py  policy.py  state.py  symbol.py
agent_py/tests/: test_agent.py  test_config_and_policy.py
deploy/systemd/: ssnp-agent.service  ssnp-portal.service  ssnp-probe.service
docs/: agent_py_distribution.md  community_explainer.md  community_explainer_en.md  community_explainer_ja.md  faq.md  faq_en.md  faq_ja.md  testing.md  testnet_runbook.md  testnet_runbook_ja.md
docs/diagrams/: anti_concentration.mmd  architecture.mmd  reward_flow.mmd
docs/openapi/: external_probe_api.yaml  portal_read_api.yaml  program_agent_api.yaml
docs/policies/: program_agent_policy.v2026-04.yaml
docs/specs/: 00_project_overview.md  (+12 more)
mockup/: README.md  app.js  index.html  styles.css
portal/: README.md  README_ja.md  go.mod  nodes.example.yaml  nodes.testnet.example.yaml
probe/: README.md  README_ja.md  config.example.yaml  config.testnet.example.yaml  go.mod
scripts/: build-agent-py-release.sh  build-go-release.sh  install-agent-py-wheel.sh  install-go-release.sh
sip/: ssnp_sip.md  ssnp_sip_en.md  ssnp_sip_ja.md
(+86 files in other folders)
