[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssnp-agent-client"
version = "0.1.0"
description = "Python operator client for the SSNP Program Agent"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0,<46.0.0",
]

[project.scripts]
ssnp-agent = "ssnp_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ssnp_agent*"]
